Fixed img misalignment & added conditional comparison in componentWillReceiveProps to reduce rendering needs

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -13,11 +13,13 @@
     box-sizing: border-box;
     width: 16.66666666666667%;
     height: 33.33333333333333%;
+    display: flex;
 }
 
 .card img{
     width: 100%;
     height: 100%;
+    vertical-align: middle;
 }
 
 .mainBoard{
